first day of office

--- a/forPractice/Pages/LogIn.razor
+++ b/forPractice/Pages/LogIn.razor
@@ -49,6 +49,10 @@
                 Name = memberAccount.Name,
                 Role = memberAccount.Role
             });
+
+        var userId = memberAccount.Id.ToString();
+
+        await js.InvokeVoidAsync("localStorage.setItem", "id", userId);
         navManager.NavigateTo("/", true);
  
 
