--- a/forPractice/Shared/NavMenu.razor
+++ b/forPractice/Shared/NavMenu.razor
@@ -26,6 +26,15 @@
                 <span class="oi oi-list-rich" aria-hidden="true"></span> Fetch data
             </NavLink>
         </div>
+                <div class="nav-item px-3">
+                    <NavLink class="nav-link" href="Member-Task">
+                        <span class="oi oi-list-rich" aria-hidden="true"></span> My Task
+                    </NavLink>
+                </div>
+
+
+
+
 
             </Authorized>
         </AuthorizeView>
@@ -37,6 +46,13 @@
                 <span class="oi oi-list-rich" aria-hidden="true"></span>Member-list
             </NavLink>
         </div>
+
+                <div class="nav-item px-3">
+                    <NavLink class="nav-link" href="Task-Assign" Match="NavLinkMatch.Prefix">
+                        <span class="oi oi-list-rich" aria-hidden="true"></span>Task Assign
+                    </NavLink>
+                </div>
+
             </Authorized>
         </AuthorizeView>
         
