--- a/forPractice/Pages/AddMembers.razor
+++ b/forPractice/Pages/AddMembers.razor
@@ -8,23 +8,23 @@
     <h3>Add Member</h3>
     <div class="form-group">
         <label for="name">Name</label>
-        <InputText class="form-control mb-2" @bind-Value="@member.Name" id="name"></InputText>
+        <InputText required class="form-control mb-2" @bind-Value="@member.Name" id="name"></InputText>
     </div>
     <div class="form-group">
         <label for="age">Age</label>
-        <InputNumber class="form-control mb-2" @bind-Value="@member.Age" id="age"></InputNumber>
+        <InputNumber required class="form-control mb-2" @bind-Value="@member.Age" id="age"></InputNumber>
     </div>
     <div class="form-group">
         <label for="email">Email</label>
-        <InputText class="form-control mb-2" @bind-Value="@member.Email" id="email"></InputText>
+        <InputText required class="form-control mb-2" @bind-Value="@member.Email" id="email" typeof="email"></InputText>
     </div>
     <div class="form-group">
         <label for="password">Password</label>
-        <InputText class="form-control mb-2" @bind-Value="@member.Password" id="password"></InputText>
+        <InputText required class="form-control mb-2" @bind-Value="@member.Password" id="password"></InputText>
     </div>
     <div class="form-group">
         <label for="joiningDate">Joining Date</label>
-        <InputDate class="form-control mb-2" @bind-Value="@member.JoiningDate" id="joiningDate"></InputDate>
+        <InputDate required class="form-control mb-2" @bind-Value="@member.JoiningDate" id="joiningDate"></InputDate>
     </div>
     <button type="submit" class="btn btn-primary">Save Member</button>
 </EditForm>
